[bdist_wheel]
universal=1

[metadata]
description-file = README.rst

[versioneer]
VCS = git
style = pep440
versionfile_source = perceptible/_version.py
versionfile_build = perceptible/_version.py
tag_prefix = ''

[tool:pytest]
testpaths = tests
addopts =
    --cov-config=setup.cfg
    --cov-append
    --cov=perceptible/ tests/

[flake8]
max-complexity = 10
max-line-length = 79
exclude = perceptible/_version.py

[coverage:run]
branch = True
source = perceptible
omit = perceptible/_version.py